
 OpenSSL CHANGES
 _______________

 This is a high-level summary of the most important changes.
 For a full list of changes, see the git commit log; for example,
 https://github.com/openssl/openssl/commits/ and pick the appropriate
 release branch.

 Changes between 1.1.1 and 3.0.0 [xx XXX xxxx]

  *) Removed NextStep support and the macro OPENSSL_UNISTD
     [Rich Salz]

  *) RC5_32_set_key has been changed to return an int type, with 0 indicating
     an error and 1 indicating success. In previous versions of OpenSSL this
     was a void type. If a key was set longer than the maximum possible this
     would crash.
     [Matt Caswell]

  *) Support SM2 signing and verification schemes with X509 certificate.
     [Paul Yang]

  *) Use SHA256 as the default digest for TS query in the ts app.
     [Tomas Mraz]

  *) Change PBKDF2 to conform to SP800-132 instead of the older PKCS5 RFC2898.
     This checks that the salt length is at least 128 bits, the derived key
     length is at least 112 bits, and that the iteration count is at least 1000.
     For backwards compatibility these checks are disabled by default in the
     default provider, but are enabled by default in the fips provider.
     To enable or disable these checks use the control
     EVP_KDF_CTRL_SET_PBKDF2_PKCS5_MODE.
     [Shane Lontis]

  *) Default cipher lists/suites are now avaialble via a function, the
     #defines are deprecated.
     [Todd Short]

  *) Add target VC-WIN32-UWP, VC-WIN64A-UWP, VC-WIN32-ARM-UWP and
     VC-WIN64-ARM-UWP in Windows OneCore target for making building libraries
     for Windows Store apps easier. Also, the "no-uplink" option has been added.
     [Kenji Mouri]

  *) Join the directories crypto/x509 and crypto/x509v3
     [Richard Levitte]

  *) Change the default RSA, DSA and DH size to 2048 bit instead of 1024.
     This changes the size when using the genpkey app when no size is given. It
     fixes an omission in earlier changes that changed all RSA, DSA and DH