@@ -1441,7 +1441,6 @@ ZINT64_it
 ZLONG_it
 ZUINT32_it
 ZUINT64_it
-_shadow_DES_check_key
 a2d_ASN1_OBJECT
 a2i_ASN1_ENUMERATED
 a2i_ASN1_INTEGER
